2005-06-01  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: New file, from gettext-0.14.4.
	* Rules-quot: New file, from gettext-0.14.4.
	* boldquot.sed: New file, from gettext-0.14.4.
	* en@boldquot.header: New file, from gettext-0.14.4.
	* en@quot.header: New file, from gettext-0.14.4.
	* insert-header.sin: New file, from gettext-0.14.4.
	* quot.sed: New file, from gettext-0.14.4.
	* remove-potcdate.sin: New file, from gettext-0.14.4.

2005-06-01  gettextize  <bug-gnu-gettext@gnu.org>

	* Rules-quot: New file, from gettext-0.14.4.
	* boldquot.sed: New file, from gettext-0.14.4.
	* en@boldquot.header: New file, from gettext-0.14.4.
	* en@quot.header: New file, from gettext-0.14.4.
	* insert-header.sin: New file, from gettext-0.14.4.
	* quot.sed: New file, from gettext-0.14.4.
	* remove-potcdate.sin: New file, from gettext-0.14.4.

2005-05-31  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.14.4.

2003-07-03  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: New file, from gettext-0.11.5.
	* boldquot.sed: New file, from gettext-0.11.5.
	* en@boldquot.header: New file, from gettext-0.11.5.
	* en@quot.header: New file, from gettext-0.11.5.
	* insert-header.sin: New file, from gettext-0.11.5.
	* quot.sed: New file, from gettext-0.11.5.
	* remove-potcdate.sin: New file, from gettext-0.11.5.
	* Rules-quot: New file, from gettext-0.11.5.
